002-landing-page/sources.css
/* "Roboto" font provided by fonts.google.com */
.roboto-thin {
  font-family: "Roboto", sans-serif;
  font-weight: 100;
  font-style: normal;
}

.roboto-thin-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 100;
  font-style: italic;
}

.roboto-light {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  font-style: normal;
}

.roboto-light-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 300;
  font-style: italic;
}

.roboto-regular {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: normal;
}

.roboto-regular-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  font-style: italic;
}

.roboto-medium {
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  font-style: normal;
}

.roboto-medium-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 500;
  font-style: italic;
}

.roboto-bold {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-style: normal;
}

.roboto-bold-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 700;
  font-style: italic;
}

.roboto-black {
  font-family: "Roboto", sans-serif;
  font-weight: 900;
  font-style: normal;
}

.roboto-black-italic {
  font-family: "Roboto", sans-serif;
  font-weight: 900;
  font-style: italic;
}

/*
 *  The following font / color specifications are provided on the project page
 *  https://www.theodinproject.com/lessons/foundations-landing-page
 */

.header-dark-bg,
.footer-dark-bg {
    background-color: #1F2937;
}

.hero-main-text {
    font-family: "Roboto", sans-serif;
    font-weight: 900;
    font-size: 48px;
    color: #F9FAF8;
}

.hero-secondary-text,
.header-link-text {
    font-family: "Roboto", sans-serif;
    font-weight: 300;
    font-size: 18px;
    color: #E5E7EB;
}

.header-logo-text {
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    font-size: 24px;
    color: #F9FAF8;
}

button.sign-up {
    font-family: "Roboto", sans-serif;
    font-weight: 500;
    font-size: 18px;
    color: #F9FAF8;
    background-color: #3882F6;
    padding: 8px 40px;
    border-radius: 8px;
}

.content .information {
    font-family: "Roboto", sans-serif;
    font-weight: 900;
    font-size: 36px;
    color: #1F2937;
}

.content .card-text {
    font-family: "Roboto", sans-serif;
    font-weight: 400;
    font-size: 18px;
    color: #1F2937;
}

.content .quote-light-bg {
    background-color: #E5E7EB;
}

.content .quote-text {
    font-family: "Roboto", sans-serif;
    font-weight: 300;
    font-size: 36px;
    font-style: italic;
}

.content .quote-attribution {
    font-family: "Roboto", sans-serif;
    font-weight: 700;
    font-size: 24px;
    color: #1F2937;
}

/* main layout */

 :root {
    --main-content-width: 85%;
    --main-content-min-width: 620px;
    --main-content-max-width: 1200px;
    --main-padding: 10px;
    --main-gap: 50px;
    --card-width: 165px;
    --card-gap: 40px;
    --card-border: 4px solid #3882F6;
 }

body {
    height: 100vh;
    display: flex;
    flex-direction: column;
    margin: 0;
}

.header {
    flex: 0 0 550px;
}

.content {
    flex: 1 1 400px;
}

.footer {
    flex: 0 0 50px;
    margin-top: auto;
}

/*
 * From the design, content should be centered in the page. Extrapolating
 * from there, I would like the content to be dynamic but have a fixed
 * max-width.
 */

.centering {
    display: flex;
    justify-content: center;
}

.with-max-width {
    width: var(--main-content-width);
    min-width: var(--main-content-min-width);
    max-width: var(--main-content-max-width);
}

.header .container,
.feature .container {
    flex-grow: 0;
    flex-shrink: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.header nav {
    display: flex;
    align-items: center;
    padding-top: var(--main-padding);
    padding-left: var(--main-padding);
    padding-right: var(--main-padding);
}

.header ul {
    list-style-type: none;
    display: flex;
    justify-content: right;
    gap: 20px;
    margin-left: auto;
    margin-top: 0;
    margin-bottom: 0;
}

.header a {
    text-decoration: none;
}

.hero {
    display: flex;
    align-items: center;
    gap: var(--main-gap);
    margin-top: auto;
    margin-bottom: auto;
    padding-left: var(--main-padding);
    padding-right: var(--main-padding);
}

.hero .text {
    flex: 1 1 200px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}

.hero button {
    flex: 0 0 auto;
    align-self: flex-start;
    margin-top: 10px;
}

.hero .image {
    flex: 1 1 300px;
    height: 100%;
    background-color: gray;
    display: flex;
    justify-content: center;
    align-items: center;
}

.feature .cards {
    display: flex;
    justify-content: center;
    gap: var(--card-gap);
}

.feature .card {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.feature .card-image {
    border: var(--card-border);
    border-radius: 20px;
    width: var(--card-width);
    height: var(--card-width);
}

.feature .card-text {
    width: var(--card-width);
    text-align: center;
    padding-top: var(--main-padding);
    padding-bottom: var(--main-padding);
}

